# sd-top-k-backend-mvp

./: .env.example  .gitignore  DEPLOY.md  DESIGN.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  dump.rdb  pyproject.toml
.github/workflows/: ci.yml  functional.yml  lint.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
src/topk/: __init__.py  config.py  db.py  main.py  redis.py
src/topk/models/: event.py  schemas.py
src/topk/routers/: admin.py  events.py  health.py  trending.py
src/topk/services/: __init__.py  bloom.py  cms.py  space_saving.py  trending.py  window.py
tests/: conftest.py  test_app.py
tests/functional/: test_blacklist.py  test_pipeline.py
tests/unit/: test_bloom.py  test_cms.py  test_space_saving.py
verify/: manifest.env
verify/acceptance/: conftest.py  test_fr1_event_ingestion.py  test_fr2_cms_counting.py  test_fr3_space_saving_topk.py  test_fr4_topk_retrieval.py  test_fr5_point_query.py  test_fr6_dedup.py  test_fr7_health.py  test_fr8_blacklist.py
verify/state/: last.json
