[project]
name = "topk"
version = "0.1.0"
description = "Top-K approximate trending service MVP"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.30,<0.31",
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "psycopg2-binary>=2.9,<2.10",
    "asyncpg>=0.29,<0.30",
    "redis>=5.0,<5.1",
    "httpx>=0.27,<0.28",
    "pydantic-settings>=2.5,<2.6",
    "alembic>=1.13,<1.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<8.4",
    "pytest-asyncio>=0.23,<0.24",
    "httpx>=0.27,<0.28",
]

[tool.ruff]
line-length = 100
select = ["E", "W", "F", "I", "UP", "B"]
target-version = "py311"

[tool.ruff.lint]
extend-safe-fixes = ["UP006", "UP035"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
